20210406テーブル関連変更

--- a/基本設計書.md
+++ b/基本設計書.md
@@ -562,32 +562,33 @@
 |----|--------------------|--------------------------|-------|----|-----------|--------|----|------------|-------|-------|---------------------|--------------------------|
 | 1  | id                 | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | スポットid                | -                        |
 | 2  | spot_category_id   | integer                  | 4バイト  | -  | 〇         | -      | 〇  | -          | -     | 〇     | スポットカテゴリid            | -                        |
-| 3  | spot_user_name     | varchar                  | 50文字  | -  | -         | -      | -  | -          | -     | -     | 本システムの代表管理者の名前      | -                        |
-| 4  | address            | varchar                  | 50文字  | -  | -         | 〇      | -  | -          | -     | -     | 利用するLINE BOTのユーザーID | -                        |
-| 5  | priority_code      | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | 危険箇所の緯度             | -                        |
-| 6  | google_url         | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | 危険箇所の経度             | -                        |
-| 7  | up_image_url       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | 危険箇所のアップ画像          | -                        |
-| 8  | status             | enum                     | -     | -  | 〇         | -      | -  | -          | 未着手   | -     | スポットの進捗ステータス          | enum値は"未着手"or"進行中"or"完了" |
-| 9  | text_title         | boolean                  | -     | -  | 〇         | -      | -  | -          | FALSE | -     | スポット完了の転送メールを送ったかどうか  | -                        |
-| 10 | text_content       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | 危険箇所のアップ画像          | -                        |
-| 11 | created_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報作成日             | -                        |
-| 12 | updated_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報更新日             | -                        |
+| 3  | spot_user_name     | varchar                  | 30文字  | -  | -         | -      | -  | -          | -     | -     | 投稿者の名前      | -                        |
+| 4  | latitude           | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの緯度             | -                        |
+| 5  | longtitude         | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの経度             | -                        |
+| 6  | priority_code      | integer                  | 4バイト  | -  | 〇         | -      | -  | -          | 1     | -     | 優先度1～5             | -                        |
+| 7  | google_url         | varchar                  | 200文字  | -  | -         | -      | -  | -          | -     | -     | googlemapのurl             | -                        |
+| 8  | up_image_url       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | 画像url          | -                        |
+| 9  | status             | enum                     | -     | -  | 〇         | -      | -  | -          | 未着手   | -     | スポットの進捗ステータス          | enum値は"未着手"or"進行中"or"完了" |
+| 10 | text_title         | varchar                  | 30文字  | -  | -         | -      | -  | -          | - | -     | スポットのタイトル  | -                        |
+| 11 | text_content       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | スポットのテキスト          | -                        |
+| 12 | created_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報作成日             | -                        |
+| 13 | updated_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報更新日             | -                        |
 #### spot_categoryテーブル
 | No | カラム名            | データ型                     | 長さ    | PK | NOT NULL  | UNIQUE | FK | オートインクリメント | デフォルト | INDEX | カラム説明            | 備考                       |
 |----|-----------------|--------------------------|-------|----|-----------|--------|----|------------|-------|-------|------------------|--------------------------|
-| 1  | id              | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | 地域id             | -                        |
-| 2  | name            | varchar                  | 30文字  | -  | 〇         | 〇      | -  | -          | -     | -     | 地域名              | organization_idと複合UNIQUE |
-| 3  | display_priority| serial                   | 4バイト  | -  | 〇         | 〇      | -  | -          | -     | -     | メール転送条件を評価する順番   | organization_idと複合UNIQUE |
+| 1  | id              | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | カテゴリid             | -                        |
+| 2  | name            | varchar                  | 30文字  | -  | 〇         | -      | -  | -          | -     | -     | カテゴリ名              |  |
+| 3  | display_priority| serial                   | 4バイト  | -  | 〇         | -      | -  | -          | -     | -     | Lineアプリ画面表示順序  |  |
 | 4  | created_at      | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | 地域情報作成日          | -                        |
 | 5  | updated_at      | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | 地域情報更新日          | -                        |
 #### usersテーブル
 | No | カラム名          | データ型                     | 長さ    | PK | NOT NULL  | UNIQUE | FK | オートインクリメント | デフォルト | INDEX | カラム説明          | 備考                                       |
 |----|----------------|--------------------------|-------|----|-----------|--------|----|------------|-------|-------|----------------|------------------------------------------|
 | 1  | id             | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | ユーザーid         | -                                        |
-| 2  | user_id        | varchar                  | 50文字  | -  | 〇         | -      | -  | -          | -     | -     | ユーザー苗字         | -                                        |
-| 3  | password       | text                     | -     | -  | 〇         | -      | -  | -          | -     | -     | 本システムの代表管理者の苗字 | -                                        |
-| 4  | enable_flag    | varchar                  | 50文字  | -  | 〇         | -      | -  | -          | -     | 〇     | 本システムの代表管理者の名前 | -                                        |
-| 5  | permission_flag| varchar                  | 255文字 | -  | 〇         | 〇      | -  | -          | -     | -     | 自治体の代表メールアドレス  | -                                        |
+| 2  | user_id        | varchar                  | 50文字  | -  | 〇         | -      | -  | -          | -     | -     | ログインid         | -                                        |
+| 3  | password       | text                     | -     | -  | 〇         | -      | -  | -          | -     | -     | パスワード | -                                        |
+| 4  | enable_flag    | boolean                  | -  | -  | 〇         | -      | -  | -          | False     | -     | 削除フラグ(Trueで論理削除) | -                                        |
+| 5  | permission_flag| boolean                  | - | -  | 〇         | -      | -  | -          | False     | -     | 権限フラグ(Trueで管理者権限)  | -                                        |
 | 6  | created_at     | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | ユーザー情報作成日      | -                                        |
 | 7  | updated_at     | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | ユーザー情報更新日      | -                                        |
 
