--- a/基本設計書.md
+++ b/基本設計書.md
@@ -57,13 +57,6 @@
 | SC-24 | パスワードリセット画面        | 新パスワード設定・更新        | 全ユーザー     |
 | SC-25 | パスワードリセット完了画面      | パスワードリセット完了表示      | 全ユーザー     |
 
-## 画面遷移図
-以下に、Web管理ダッシュボードにおいて管理ユーザーの画面遷移図を示す。  
-<img src="./images/【画面遷移図】危険箇所スポット（管理ユーザー）.png" height="500" alt="ダッシュボード画面遷移図_管理ユーザー" >
-
-### Web管理ダッシュボード画面遷移図（一般ユーザー）
-以下に、Web管理ダッシュボードにおいて管理ユーザーの画面遷移図を示す。   
-<img src="./images/【画面遷移図】危険箇所スポット（一般ユーザー）.png" height="500" alt="ダッシュボード画面遷移図_一般ユーザー" > 
 
 ## Web管理ダッシュボード画面共通設計
 ### フォーム入力項目チェック・エラーメッセージ設計
@@ -560,37 +553,38 @@
 #### spot_manageテーブル
 | No | カラム名               | データ型                     | 長さ    | PK | NOT NULL  | UNIQUE | FK | オートインクリメント | デフォルト | INDEX | カラム説明               | 備考                       |
 |----|--------------------|--------------------------|-------|----|-----------|--------|----|------------|-------|-------|---------------------|--------------------------|
-| 1  | id                 | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | スポットid                | -                        |
-| 2  | spot_category_id   | integer                  | 4バイト  | -  | 〇         | -      | 〇  | -          | -     | 〇     | スポットカテゴリid            | -                        |
+| 1  | id                 | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | スポットid                | フレームワーク標準                       |
+| 2  | spot_category_id   | integer                  | 4バイト  | -  | 〇         | -      | 〇  | -          | -     | 〇     | スポットカテゴリid            | サービス利用                        |
 | 3  | spot_user_name     | varchar                  | 30文字  | -  | -         | -      | -  | -          | -     | -     | 投稿者の名前      | -                        |
-| 4  | latitude           | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの緯度             | -                        |
-| 5  | longtitude         | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの経度             | -                        |
-| 6  | priority_code      | integer                  | 4バイト  | -  | 〇         | -      | -  | -          | 1     | -     | 優先度1～5             | -                        |
-| 7  | google_url         | varchar                  | 200文字  | -  | -         | -      | -  | -          | -     | -     | googlemapのurl             | -                        |
-| 8  | up_image_url       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | 画像url          | -                        |
-| 9  | status             | enum                     | -     | -  | 〇         | -      | -  | -          | 未着手   | -     | スポットの進捗ステータス          | enum値は"未着手"or"進行中"or"完了" |
-| 10 | text_title         | varchar                  | 30文字  | -  | -         | -      | -  | -          | - | -     | スポットのタイトル  | -                        |
-| 11 | text_content       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | スポットのテキスト          | -                        |
-| 12 | created_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報作成日             | -                        |
-| 13 | updated_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報更新日             | -                        |
+| 4  | latitude           | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの緯度             | サービス利用                        |
+| 5  | longtitude         | double precision         | 8バイト  | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの経度             | サービス利用                        |
+| 6  | address            | varchar                  | 30文字  | -  | -         | -      | -  | -          | -     | -     | 住所      | サービス利用                        |
+| 7  | priority_code      | integer                  | 4バイト  | -  | 〇         | -      | -  | -          | 1     | -     | 優先度1～5             | サービス利用                        |
+| 8  | google_url         | varchar                  | 200文字  | -  | -         | -      | -  | -          | -     | -     | googlemapのurl             |  サービス利用                                                |
+| 9  | up_image_url       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | 画像url          | サービス利用                        |
+| 10 | status             | enum                     | -     | -  | 〇         | -      | -  | -          | 未着手   | -     | スポットの進捗ステータス          |  サービス利用,enum値は"未着手"or"進行中"or"完了" |
+| 11 | text_title         | varchar                  | 30文字  | -  | -         | -      | -  | -          | - | -     | スポットのタイトル  | -                        |
+| 12 | text_content       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | スポットのテキスト          | サービス利用                        |
+| 13 | created_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報作成日             | フレームワーク標準                        |
+| 14 | updated_at         | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | スポット情報更新日             | フレームワーク標準                        |
 #### spot_categoryテーブル
 | No | カラム名            | データ型                     | 長さ    | PK | NOT NULL  | UNIQUE | FK | オートインクリメント | デフォルト | INDEX | カラム説明            | 備考                       |
 |----|-----------------|--------------------------|-------|----|-----------|--------|----|------------|-------|-------|------------------|--------------------------|
-| 1  | id              | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | カテゴリid             | -                        |
-| 2  | name            | varchar                  | 30文字  | -  | 〇         | -      | -  | -          | -     | -     | カテゴリ名              |  |
-| 3  | display_priority| serial                   | 4バイト  | -  | 〇         | -      | -  | -          | -     | -     | Lineアプリ画面表示順序  |  |
-| 4  | created_at      | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | 地域情報作成日          | -                        |
-| 5  | updated_at      | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | 地域情報更新日          | -                        |
+| 1  | id              | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | カテゴリid             | フレームワーク標準                        |
+| 2  | name            | varchar                  | 30文字  | -  | 〇         | -      | -  | -          | -     | -     | カテゴリ名              | サービス利用                        |
+| 3  | display_priority| serial                   | 4バイト  | -  | 〇         | 〇      | -  | -          | -     | -     | Lineアプリ画面表示順序  | サービス利用                        |
+| 4  | created_at      | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | 地域情報作成日          | フレームワーク標準                        |
+| 5  | updated_at      | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | 地域情報更新日          | フレームワーク標準                        |
 #### usersテーブル
 | No | カラム名          | データ型                     | 長さ    | PK | NOT NULL  | UNIQUE | FK | オートインクリメント | デフォルト | INDEX | カラム説明          | 備考                                       |
 |----|----------------|--------------------------|-------|----|-----------|--------|----|------------|-------|-------|----------------|------------------------------------------|
-| 1  | id             | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | ユーザーid         | -                                        |
-| 2  | user_id        | varchar                  | 50文字  | -  | 〇         | -      | -  | -          | -     | -     | ログインid         | -                                        |
-| 3  | password       | text                     | -     | -  | 〇         | -      | -  | -          | -     | -     | パスワード | -                                        |
-| 4  | enable_flag    | boolean                  | -  | -  | 〇         | -      | -  | -          | False     | -     | 削除フラグ(Trueで論理削除) | -                                        |
-| 5  | permission_flag| boolean                  | - | -  | 〇         | -      | -  | -          | False     | -     | 権限フラグ(Trueで管理者権限)  | -                                        |
-| 6  | created_at     | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | ユーザー情報作成日      | -                                        |
-| 7  | updated_at     | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | ユーザー情報更新日      | -                                        |
+| 1  | id             | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | ユーザーid         | フレームワーク標準                                        |
+| 2  | user_id        | varchar                  | 50文字  | -  | 〇         | -      | -  | -          | -     | -     | ログインid         | サービス利用                        |
+| 3  | password       | text                     | -     | -  | 〇         | -      | -  | -          | -     | -     | パスワード | フレームワーク標準                                        |
+| 4  | enable_flag    | boolean                  | -  | -  | 〇         | -      | -  | -          | False     | -     | 削除フラグ(Trueで論理削除) | サービス利用                        |
+| 5  | permission_flag| boolean                  | - | -  | 〇         | -      | -  | -          | False     | -     | 権限フラグ(Trueで管理者権限)  | サービス利用                        |
+| 6  | created_at     | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | ユーザー情報作成日      | フレームワーク標準                                        |
+| 7  | updated_at     | timestamp with time zone | 8バイト  | -  | 〇         | -      | -  | -          | -     | -     | ユーザー情報更新日      | フレームワーク標準                                        |
 
 
 ### ファイル一覧
