テーブル変更

--- a/基本設計書.md
+++ b/基本設計書.md
@@ -545,12 +545,12 @@
 ### テーブル一覧
 | No | テーブル名             | テーブル概要               |
 |----|-------------------|----------------------|
-| 1  | spot_manage     | スポット管理                |
+| 1  | spots     | スポット管理                |
 | 2  | spot_category          | 投稿カテゴリ |
 | 3  | users             | webコンソールユーザー               |
 
 ### テーブル定義
-#### spot_manageテーブル
+#### spotsテーブル
 | No | カラム名               | データ型                     | 長さ    | PK | NOT NULL  | UNIQUE | FK | オートインクリメント | デフォルト | INDEX | カラム説明               | 備考                       |
 |----|--------------------|--------------------------|-------|----|-----------|--------|----|------------|-------|-------|---------------------|--------------------------|
 | 1  | id                 | serial                   | 4バイト  | 〇  | 〇         | 〇      | -  | 〇          | -     | 〇     | スポットid                | フレームワーク標準                       |
