--- a/テーブルデータ(暫定_マルチテナント対応)_佐藤/基本設計書.md
+++ b/テーブルデータ(暫定_マルチテナント対応)_佐藤/基本設計書.md
@@ -23,7 +23,7 @@
 | 5  | latitude           | double precision         | 8バイト | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの緯度  | サービス利用       |
 | 6  | longtitude         | double precision         | 8バイト | -  | -         | -      | -  | -          | -     | -     | おすすめスポットの経度  | サービス利用       |
 | 7  | address            | varchar                  | 30文字  | -  | -         | -      | -  | -          | -     | -     | 住所                    | サービス利用       |
-| 8  | priority_code      | integer                  | 4バイト | -  | 〇        | -      | -  | -          | 1     | -     | 優先度1～5              | サービス利用       |
+| 8  | weight             | integer                  | 4バイト | -  | 〇        | -      | -  | -          | 1     | -     | 優先度1～5              | サービス利用       |
 | 9  | google_url         | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | googlemapのurl          | サービス利用       |
 | 10 | up_image_url       | varchar                  | 200文字 | -  | -         | -      | -  | -          | -     | -     | 画像url                 | サービス利用       |
 | 11 | status             | enum                     | -       | -  | 〇        | -      | -  | -          | 未着手| -     | スポットの進捗ステータス| サービス利用,enum値は"未着手"or"進行中"or"完了" |
